Disabled GRIP code and made misc. minor modifications