@@ -13,7 +13,7 @@ import edu.wpi.first.wpilibj.DriverStation;
 import edu.wpi.first.wpilibj.Joystick;
 import edu.wpi.first.wpilibj.RobotDrive;
 import edu.wpi.first.wpilibj.SampleRobot;
-import edu.wpi.first.wpilibj.networktables.NetworkTable;
+//import edu.wpi.first.wpilibj.networktables.NetworkTable;
 import edu.wpi.first.wpilibj.CANTalon.TalonControlMode;
 import edu.wpi.first.wpilibj.CameraServer;
 import edu.wpi.first.wpilibj.smartdashboard.SmartDashboard;
@@ -62,11 +62,11 @@ public class Robot extends SampleRobot
   static final int     	IP_CAMERA = 3;
   
   //Test GRIP Code
-  private final static String[] GRIP_ARGS = new String[] {
-	        "/usr/local/frc/JRE/bin/java", "-jar",
-	        "/home/lvuser/grip.jar", "/home/lvuser/project.grip" };
+  //private final static String[] GRIP_ARGS = new String[] {
+  //        "/usr/local/frc/JRE/bin/java", "-jar",
+  //        "/home/lvuser/grip.jar", "/home/lvuser/project.grip" };
 
-  public final NetworkTable grip = NetworkTable.getTable("GRIP");
+  //public final NetworkTable grip = NetworkTable.getTable("GRIP");
   
  
   public Robot() throws IOException
@@ -158,8 +158,8 @@ public class Robot extends SampleRobot
 
    		// Start camera server using our class for dual usb cameras.
       
-   		//cameraThread = new CameraFeed(this);
-   		//cameraThread.start();
+   		cameraThread = new CameraFeed(this);
+   		cameraThread.start();
      
    		// Start thread to monitor distance sensor.
    		
@@ -167,11 +167,13 @@ public class Robot extends SampleRobot
    		//monitorDistanceThread.start();
    		
    		/* Run GRIP in a new process */
-        try {
-            Runtime.getRuntime().exec(GRIP_ARGS);
-        } catch (IOException e) {
-            e.printStackTrace(Util.logPrintStream);
-        }
+        //try {
+        //    new ProcessBuilder("/home/lvuser/grip").inheritIO().start();
+        //} 
+        //catch (IOException e) {
+        //    e.printStackTrace(Util.logPrintStream);
+        //}
+
             
    		Util.consoleLog("end");
     }
@@ -330,9 +332,10 @@ public class Robot extends SampleRobot
 	  robotDrive = new RobotDrive(LFPwmTalon, LRPwmTalon, RFPwmTalon, RRPwmTalon);
   }
   
-  // Initialize and Log status indication from CANTalon. If we see an exception
-  // or a talon has low voltage value, it did not get recognized by the RR on start up.
-  
+/** Initialize and Log status indication from CANTalon. If we see an exception
+* or a talon has low voltage value, it did not get recognized by the RR on start up.
+* @param talon A CANTalon object to initialize
+**/
   private void InitializeCANTalon(CANTalon talon)
   {
 	  Util.consoleLog("talon init: %s   voltage=%.1f", talon.getDescription(), talon.getBusVoltage());
